apps/medium-place/caddy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  namespace: medium-place
  labels:
    app.kubernetes.io/name: caddy
    app.kubernetes.io/part-of: caddy
    app.kubernetes.io/component: server
    app.kubernetes.io/version: 2.5.1
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: caddy
      app.kubernetes.io/part-of: caddy
  template:
    metadata:
      annotations:
        diun.enable: "true"
      labels:
        app.kubernetes.io/name: caddy
        app.kubernetes.io/part-of: caddy
        app.kubernetes.io/component: server
        app.kubernetes.io/version: 2.5.1
    spec:
      containers:
        - name: caddy
          image: caddy:2.5.1
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          volumeMounts:
            - name: caddy-config
              mountPath: /etc/caddy
          resources:
            requests:
              cpu: 2m
              memory: 32Mi
            limits:
              cpu: 4m
              memory: 64Mi
      volumes:
        - name: caddy-config
          configMap:
            name: caddy-config
