apps/medium-place/caddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
spec:
  selector:
    app.kubernetes.io/name: caddy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
