apps/medium-place/caddy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rpm: 100
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: true
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - medium.place
      secretName: medium.place-tls
  rules:
    - host: medium.place
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: caddy
                port:
                  name: http
